--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -1,5 +1,8 @@
 {
   "header.logo": "DemocracyOS Platform",
   "header.login": "Login",
-  "header.signup": "Signup"
+  "header.signup": "Signup",
+
+  "login.error.email-not-valid": "The email address for this citizen is not validated. We send citizens a welcome email when they sign up. Please check your email (remember to check your spam folder too) and click on the link supplied on the email. Click <a href='/signup/resend-validation-email'>here</a> if you need the welcome email to be resent",
+  "login.error.user-disabled": "This account has been disabled"
 }
