--- a/lib/translations/lib/es.json
+++ b/lib/translations/lib/es.json
@@ -1,8 +1,26 @@
 {
+  "common.email": "Correo electrónico",
+  "common.password": "Contraseña",
+
   "header.logo": "DemocracyOS Platform",
   "header.login": "Entrar",
   "header.signup": "Registrarse",
 
-  "login.error.email-not-valid": "La dirección de correo electrónico no ha sido validada. A cada ciudadano se le envía un correo electrónico de bienvenida al momento de registrarse. El siguiente paso es abrir el correo electrónico que te hemos enviado (no te olvides de la carpeta 'Correo no deseado') y hacer clic en el enlace provisto. Cliquea <a href='/signup/resend-validation-email'>aquí</a> si necesitás que te reenviemos el correo electrónico de bienvenida",
-  "login.error.user-disabled": "Esta cuenta ha sido deshabilitada"
+  "signin.error.email-not-valid": "La dirección de correo electrónico no ha sido validada. A cada ciudadano se le envía un correo electrónico de bienvenida al momento de registrarse. El siguiente paso es abrir el correo electrónico que te hemos enviado (no te olvides de la carpeta 'Correo no deseado') y hacer clic en el enlace provisto. Cliquea <a href='/signup/resend-validation-email'>aquí</a> si necesitás que te reenviemos el correo electrónico de bienvenida",
+  "signin.error.user-disabled": "Esta cuenta ha sido deshabilitada",
+
+  "signup.title": "Registrarse con correo electrónico",
+  "signup.email.placeholder": "ejemplo@correo.com",
+  "signup.firstname.label": "Tu nombre",
+  "signup.firstname.placeholder": "Nombre",
+  "signup.lastname.label": "Tu apellido",
+  "signup.lastname.placeholder": "Apellido",
+  "signup.repeat-password.label": "Repetir contraseña",
+  "signup.repeat-password.placeholder": "Repetir contraseña",
+  "signup.submit": "¡Regístrate!",
+  "signup.resend.email": "Reenviar correo electrónico de validación",
+  "signup.success.title": "¡Bienvenido!",
+  "signup.success.text.1": "Te registraste. Te hemos enviado un correo electrónico para que puedas validar tu dirección de correo electrónico.",
+  "signup.success.text.2": "El siguiente paso es abrir el correo electrónico que te hemos enviado (no te olvides de la carpeta 'Correo no deseado') y hacer clic en el enlace provisto.",
+  "singup.resend.email": "Reenviar correo electrónico de validación"
 }
