--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -1,8 +1,44 @@
 {
+  "common.email": "Email",
+  "common.password": "Password",
+
   "header.logo": "DemocracyOS Platform",
   "header.login": "Login",
   "header.signup": "Signup",
 
-  "login.error.email-not-valid": "The email address for this citizen is not validated. We send citizens a welcome email when they sign up. Please check your email (remember to check your spam folder too) and click on the link supplied on the email. Click <a href='/signup/resend-validation-email'>here</a> if you need the welcome email to be resent",
-  "login.error.user-disabled": "This account has been disabled"
+  "validators.required": "Required",
+  "validators.checked": "Required checked field",
+  "validators.invalid.email": "Invalid email",
+  "validators.invalid.firstname": "Invalid firstname",
+  "validators.invalid.lastname": "Invalid lastname",
+  "validators.invalid.author": "Invalid author",
+  "validators.invalid.url": "Invalid URL",
+  "validators.invalid.number": "Invalid number",
+  "invalid.password": "Invalid password",
+  "validators.min-length.singular": "At least 1 character",
+  "validators.min-length.plural": "At least {n} characters",
+  "validators.max-length.singular": "1 character max",
+  "validators.max-length.plural": "{n} characters max",
+  "validators.input.not-exists": "{name} element does not exist",
+  "validators.password.not.match": "Passwords don't match",
+  "validators.invalid": "Invalid",
+  "validators.invalid.time": "Invalid time",
+
+  "signin.error.email-not-valid": "The email address for this citizen is not validated. We send citizens a welcome email when they sign up. Please check your email (remember to check your spam folder too) and click on the link supplied on the email. Click <a href='/signup/resend-validation-email'>here</a> if you need the welcome email to be resent",
+  "signin.error.user-disabled": "This account has been disabled",
+
+  "signup.title": "Signup with email",
+  "signup.email.placeholder": "example@email.com",
+  "signup.firstname.label": "Your firstname",
+  "signup.firstname.placeholder": "Firstname",
+  "signup.lastname.label": "Your lastname",
+  "signup.lastname.placeholder": "Lastname",
+  "signup.repeat-password.label": "Repeat password",
+  "signup.repeat-password.placeholder": "Repeat password",
+  "signup.submit": "Signup now!",
+  "signup.resend.email": "Resend validation email",
+  "signup.success.title": "Welcome!",
+  "signup.success.text.1": "Your sign up data was received. We sent you an email so you can validate your email address.",
+  "signup.success.text.2": "Please check your email (remember to check your spam folder too) and click on the link supplied on the email.",
+  "singup.resend.email": "Resend validation email"
 }
