[signup] - Add resend email validation, email validation #7

--- a/lib/translations/lib/en.json
+++ b/lib/translations/lib/en.json
@@ -1,6 +1,7 @@
 {
   "common.email": "Email",
   "common.password": "Password",
+  "common.no-user-for-email" : "No user found for that email address",
 
   "header.logo": "DemocracyOS Platform",
   "header.login": "Login",
@@ -38,7 +39,10 @@
   "signup.submit": "Signup now!",
   "signup.resend.email": "Resend validation email",
   "signup.success.title": "Welcome!",
+  "signup.success.welcome": "Welcome {name}!",
   "signup.success.text.1": "Your sign up data was received. We sent you an email so you can validate your email address.",
   "signup.success.text.2": "Please check your email (remember to check your spam folder too) and click on the link supplied on the email.",
-  "singup.resend.email": "Resend validation email"
+  "singup.resend.email": "Resend validation email",
+
+  "forgot.mail.example": "example@email.com"
 }
