--- a/lib/translations/lib/es.json
+++ b/lib/translations/lib/es.json
@@ -2,6 +2,7 @@
   "common.email": "Correo electrónico",
   "common.password": "Contraseña",
   "common.no-user-for-email" : "No tenemos registrado ese correo electrónico",
+  "common.please.wait": "Por favor espere",
 
   "header.logo": "DemocracyOS Platform",
   "header.login": "Entrar",
@@ -43,6 +44,7 @@
   "signup.success.text.1": "Te registraste. Te hemos enviado un correo electrónico para que puedas validar tu dirección de correo electrónico.",
   "signup.success.text.2": "El siguiente paso es abrir el correo electrónico que te hemos enviado (no te olvides de la carpeta 'Correo no deseado') y hacer clic en el enlace provisto.",
   "singup.resend.email": "Reenviar correo electrónico de validación",
+  "signup.email.used": "Ya existe un usuario con el correo electrónico %s",
 
   "forgot.mail.example": "ejemplo@correo.com"
 }
